Fixing spacing on mobile hero section

--- a/assets/style.css
+++ b/assets/style.css
@@ -696,7 +696,7 @@ body form {
 #home-jumbotron h1 {
 	color: #EFE5DE;
 	margin-top: 0px;
-	margin-bottom: -16px;
+	margin-bottom: -8px;
 }
 
 #home-jumbotron p {
@@ -704,6 +704,7 @@ body form {
 	margin-top: 0px;
 	padding-top: 0px;
 	line-height: 1em;
+	margin-bottom: 16px;
 }
 
 	#home-supporting {
